--- a/landSV/pom.xml
+++ b/landSV/pom.xml
@@ -13,7 +13,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
 	<name>landSV</name>
-	<description>landSV backend</description>
+	<description>landSVProject backend</description>
 	<url/>
 	<licenses>
 		<license/>
