--- a/landSV/src/main/resources/application.properties
+++ b/landSV/src/main/resources/application.properties
@@ -1,5 +1,7 @@
+server.port=8080
+server.address=0.0.0.0
 spring.application.name=landSV
-spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3306/land_sv?useSSL=false&allowPublicKeyRetrieval=true}
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://db:3306/land_sv?useSSL=false&allowPublicKeyRetrieval=true}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME:diego}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:diegomysql03092005}
 
