--- a/landSV/src/main/resources/application.properties
+++ b/landSV/src/main/resources/application.properties
@@ -20,13 +20,4 @@ app.google.client_id=${GOOGLE_CLIENT_ID:202800181975-e2cs6qi7f33qji9r4v838sq07mg
 
 spring.servlet.multipart.max-file-size=20MB
 
-spring.mail.host=smtp-relay.brevo.com
-spring.mail.port=587
-spring.mail.username=apikey
-spring.mail.password=${BREVO_SMTP_KEY}
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.smtp.starttls.required=true
-spring.mail.transport.protocol=smtp
-spring.mail.default-encoding=UTF-8
-spring.mail.debug=true
+brevo.api.key=${BREVO_SMTP_KEY}
